[[bin]]
name = "simple-eth-node-discoverer"
path = "src/main.rs"

[package]
name = "simple-eth-node-discoverer"
version = "0.1.0"
authors = ["allemanfredi <alle.manfredi@gmail.com>"]
edition = "2018"

[dependencies]
serde =  { version ="1.0.112", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "0.2.21", features = ["tcp", "full"] }
cli = { package = "cli", path = "./cli" }
peers = { package = "peers", path = "./peers" }
settings = { package = "settings", path = "./settings" }
utils = { package = "utils", path = "./utils" }

[workspace]
members = [
  "peers",
  "settings"
]