[package]
name = "peers"
version = "0.1.0"
authors = ["allemanfredi <alle.manfredi@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde =  { version ="1.0.112", features = ["derive"] }
serde_json = "1.0.55"
rand = "0.7.3"
libsecp256k1 = "0.3.5"
sha3 = "0.9.0"
tokio = { version = "0.2.21", features = ["tcp", "full"] }
settings = { package = "settings", path = "../settings" }
utils = { package = "utils", path = "../utils" }